--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,42 @@
-name: Slack Test
+name: CI
 
 on:
   push:
     branches:
       - main
+  pull_request:
 
 jobs:
-  notify:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Notify Slack (Success)
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
+
+      - name: Notify Slack on failure
+        if: failure()
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_MESSAGE: "❌ Tests failed on *${{ github.ref_name }}* by *${{ github.actor }}*"
+          SLACK_COLOR: danger
+
+      - name: Notify Slack on success
         if: success()
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_MESSAGE: "Push to *${{ github.ref_name }}* by *${{ github.actor }}*"
+          SLACK_MESSAGE: "✅ All tests passed on *${{ github.ref_name }}* by *${{ github.actor }}*"
           SLACK_COLOR: good
