--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,18 @@
-name: CI
+name: Slack Notification on Code Push
 
 on:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
-  test:
+  slack-notify:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm test
-
-      - name: Notify Slack on failure
-        if: failure()
+      - name: Notify Slack
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_MESSAGE: "❌ Tests failed on *${{ github.ref_name }}* by *${{ github.actor }}*"
-          SLACK_COLOR: danger
-
-      - name: Notify Slack on success
-        if: success()
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_MESSAGE: "✅ All tests passed on *${{ github.ref_name }}* by *${{ github.actor }}*"
-          SLACK_COLOR: good
+          SLACK_MESSAGE: "Code pushed to *${{ github.ref_name }}* by *${{ github.actor }}*"
+          SLACK_COLOR: '#439FE0'
